fixed the overflow

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -76,7 +76,7 @@
 }
 
 .contact-form button {
-  max-width: 130px;
+  max-width: 140px;
   background-color: #001221;
   color: #fff;
   border: none;
